# SimFlightViz

./: LICENSE  README.md  pyproject.toml
simflightviz/: flightlog.csv  simflightviz.py
tests/: test_simflightviz.py
