[tool.poetry]
name = "simflightviz"
version = "0.1.0"
description = ""
authors = ["Vsevolod Glumov <seva17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.11.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
geopandas = "^0.12.1"
pip = "^22.3.1"
matplotlib = "^3.6.2"
basemap = "^1.3.6"
basemap-data-hires = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
